--- a/views/index.html
+++ b/views/index.html
@@ -104,8 +104,8 @@
                 padding-right: 10px;
             }
             #prevBtn {
-                width: 30%;
-                margin-left: 35%;
+                width: 20%;
+                /* margin-left: 35%; */
                 color: white;
                 background-color: #7e848a;
                 border: none;
@@ -114,8 +114,8 @@
                 padding: 2px 10px;
             }
             #nextBtn {
-                width: 30%;
-                margin-left: 35%;
+                width: 20%;
+                margin-left: 35px;
                 color: white;
                 background-color: #1b2631;
                 border: none;
@@ -129,7 +129,10 @@
             }
             #buttons {
                 display: flex;
-                width: 50%;
+                justify-content: center;
+                width: 80%;
+                flex-direction: row;
+                /* background-color: aqua; */
             }
             th {
                 vertical-align: text-top;
@@ -181,7 +184,6 @@
                     </div>
                 </div>
                 <div id = "buttons">
-
                     <button id = "prevBtn">
                         &#5130;
                     </button>
