--- a/views/index.html
+++ b/views/index.html
@@ -136,6 +136,7 @@
             }
             th {
                 vertical-align: text-top;
+                text-align: right;
             }
         </style>
     </head>
