--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Grape+Nuts&display=swap" rel="stylesheet"> 
+        <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
           <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <style>
             body {
@@ -72,22 +73,34 @@
                 padding: 8px 50px;
                 color: white;
             }
-
-            #output1 , #output2{
+            #outputs {
                 width: 60%;
+                height: 100%;
                 padding-left: 50px;
                 padding-top: 30px;
+            }
+            #output1 , #output2{
+                width: 100%;
+                height: 90%;
                 display: flex;
                 flex-direction: column;
             }
 
             #output1 {
-                display: none;
+                display: flex;
                 justify-content: space-around;
             }
 
             #output2 {
+                display: none;
+                padding-top: 30px;
+                flex-direction: row;
                 justify-content: flex-start;
+            }
+
+            #flowchart {
+                width: 30%;
+                overflow: scroll;
             }
 
             #graphBanner {
@@ -109,6 +122,11 @@
                 width: 80%;
                 height: 50%;
                 font-family: 'Courier New', Courier, monospace;
+            }
+            .tableDiv {
+                /* background-color: #1b2631; */
+                height: 70%;
+                overflow: scroll;
             }
             h2 {
                 font-family: 'Courier New', Courier, monospace;
@@ -146,7 +164,7 @@
                 justify-content: center;
                 display: none;
             }
-            #nextChildState, #prevChildState{
+            #nextChildState{
                 width: 10%;
                 margin: 0px 35px;
                 color: white;
@@ -156,14 +174,30 @@
                 font-size: 20px;
                 padding: 2px 10px;
             }
+            #graphBtn, #statesBtn {
+                width: 10%;
+                color: white;
+                background-color: #1b2631;
+                border: none;
+                border-radius: 5px;
+                font-size: 20px;
+                padding: 5px 10px;
+                margin-right: 20px;
+
+            }
             #changeChildStateLabel {
                 margin: 0px;
                 padding-top: 5px;
                 text-align: center;
             }
-            table {
+            .stateTable {
                 height: 80%;
                 margin-bottom: 50px;
+            }
+            #graphNodeTable {
+                /* height: 10%; */
+                margin-left: 20px;
+                font-family: 'Courier New', Courier, monospace;
             }
             #buttons {
                 display: flex;
@@ -180,7 +214,7 @@
                 color: orangered;
                 margin: 5px;
                 font-size: 15px;
-                display: none;
+                display: none   ;
             }
         </style>
     </head>
@@ -200,17 +234,65 @@
                     <p id = "codehere"></p>
                 </div>          
             </div>
+            <div id = "outputs">
+                <div id = "outputSelector">
+                    <button id = "statesBtn">
+                        States
+                    </button>
+                    <button id = "graphBtn">
+                        Graph
+                    </button>
+                </div>
             <div id = "output2">
-                <h2 id = "graphBanner">Graph</h2>
+                <!-- <h2 id = "graphBanner">Graph</h2> -->
+                <div id = "flowchart" class = "mermaid">
+                    flowchart TD
+                        n0(A)
+                        click n0 clickGraphNode
+                        n1(B)
+                        n0 --> n1
+                </div>
+                <div id = "graphNode">
+                    <table id = "graphNodeTable">
+                        <tr>
+                            <th>PC</th>
+                            <td id = "graphStatePC">-</td>
+                        </tr>
+                        <tr>
+                            <th>TIME</th>
+                            <td id = "graphStateTIME"></td>
+                        </tr>
+                        <tr>
+                            <th>OS</th>
+                            <td id = "graphStateOS">-</td>
+                        </tr>
+                        <tr>
+                            <th>KONT</th>
+                            <td id = "graphStateKONT">-</td>
+                        </tr>
+                        <tr>
+                            <th>ENV</th>
+                            <td id = "graphStateENV">-</td>
+                        </tr>
+                        <tr>
+                            <th>STORE</th>
+                            <td id = "graphStateSTORE">-</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
             <div id = "output1">
                 <div class = "stateDiv" id = "curState">
-                    <div>
                     <h2 id = "curStateHeader">Current State</h2>
-                    <table>
+                    <div class = "tableDiv">
+                    <table class = "stateTable">
                         <tr>
                             <th>PC</th>
                             <td id = "curStatePC"></td>
+                        </tr>
+                        <tr>
+                            <th>TIME</th>
+                            <td id = "curStateTIME"></td>
                         </tr>
                         <tr>
                             <th>OS</th>
@@ -229,9 +311,9 @@
                             <td id = "curStateSTORE"></td>
                         </tr>
                     </table>
-                    <h6 id = "mulStateNoti"><span style="font-size: 20px;font-weight: bold;">&#x26A0;</span>This state has multiple children</h6> 
 
                     </div>
+                    <h6 id = "mulStateNoti"><span style="font-size: 20px;font-weight: bold;">&#x26A0;</span>This state has multiple children</h6> 
                 </div>
                 <div id = "buttons">
                     <button id = "prevBtn">
@@ -242,12 +324,16 @@
                     </button>
                 </div>
                 <div class = "stateDiv" id = "nextState">
-                    <div>
                     <h2 id = "nextStateHeader">Next State</h2>
-                    <table>
+                    <div class = "tableDiv">
+                    <table class = "stateTable">
                         <tr>
                             <th>PC</th>
                             <td id = "nextStatePC"></td>
+                        </tr>
+                        <tr>
+                            <th>TIME</th>
+                            <td id = "nextStateTIME"></td>
                         </tr>
                         <tr>
                             <th>OS</th>
@@ -266,14 +352,15 @@
                             <td id = "nextStateSTORE"></td>
                         </tr>
                     </table>
+                    </div>
                     <div id = "chooseChildStateDiv">
                         <p id = "changeChildStateLabel">Change Child State</p>
                         <button id = "nextChildState">
                             &#5125;
                         </button>
                     </div>
-                    </div>
                 </div>
+            </div>
             </div>
         </div>
     </body>
@@ -285,7 +372,9 @@
         var childToParent = new Map();
 
         function displayState(eleName, stateId) {
+            // console.log(eleName, stateId)
             $("#" + eleName + "PC").html(states[stateId]["instr"] );
+            $("#" + eleName + "TIME").html(states[stateId]["TIME"] );
             $("#" + eleName + "OS").html(states[stateId]["OS"]);
             $("#" + eleName + "KONT").html(states[stateId]["KONT"]);
             $("#" + eleName + "ENV").html(states[stateId]["ENV"]);
@@ -299,6 +388,16 @@
             state2 = children[curChildId];
             displayState("nextState", state2);
         });
+
+        $("#statesBtn").click(function() {
+            $("#output1").css("display", "flex");
+            $("#output2").css("display", "none");
+        })
+        $("#graphBtn").click(function() {
+            $("#output1").css("display", "none");
+            $("#output2").css("display", "flex");
+            displayGraph();
+        })
 
         $("#nextBtn").click(function() {
             if (parentToChild.has(state2) && parentToChild.get(state2).length > 0) {
@@ -332,6 +431,49 @@
             $("#nextBtn").css('background-color', '#1b2631');
             displayStates();
         });
+
+        var clickGraphNode = function(id) {
+            console.log(id)
+            displayState("graphState", id);
+        }
+        
+        function displayGraph() {
+            var code = "flowchart TD;\n";
+            for (var i = 0; i < states.length; i++) {
+                const instr = String(states[i]["instr"]).replace(/\[|\]|"/g, " ")
+                code += String(i) + "(" + instr + ")\n";
+                code += "click " + String(i) + " clickGraphNode\n";
+                if (parentToChild.has(i) && parentToChild.get(i).length > 0) {
+                    children = parentToChild.get(i);
+                    for (var j = 0; j < children.length; j++) {
+                        code += i + " --> " + children[j] + " \n";
+                    }
+                }
+            }
+            // code += "click 1 clickGraphNode"
+            // console.log(code)
+            $("#flowchart").append(code)
+            // mermaid.init(undefined, document.querySelector("#flowchart"))
+            mermaid.initialize({
+                startOnLoad: true,
+            securityLevel: 'loose'
+            });
+
+            var insertSVG = function(svgCode, bindFunctions) {
+                element.innerHTML = svgCode
+                if (typeof callback !== 'undefined') {
+                    callback(id);
+                }
+                bindFunctions(element)
+            };
+            // mermaid.render('theGraph', code, function(svgCode) {
+            //     $("#flowchart").html(svgCode)
+            // })
+            var element = document.querySelector("#flowchart")
+            mermaid.render('theGraph', code, insertSVG, element)
+            // mermaid.render()
+
+        }
 
         function displayStates() {
             // console.log(states[state1]["instr"]);   
@@ -369,8 +511,15 @@
                     state1 = 0;
                     state2 = 1; // can only have one state at the beginning
                     displayStates();
+                    displayGraph();
                 }
             });
         });
+
+        mermaid.initialize({
+            startOnLoad: true,
+        securityLevel: 'loose'
+        });
+
     </script>
 </html>
