--- a/views/index.html
+++ b/views/index.html
@@ -299,6 +299,9 @@
                             <th>TIME</th>
                             <td id = "graphStateTIME"></td>
                         </tr>
+                        <th>COUNTER</th>
+                            <td id = "graphStateCOUNTER"></td>
+                        </tr>
                         <tr>
                             <th>OS</th>
                             <td id = "graphStateOS">-</td>
@@ -330,6 +333,9 @@
                         <tr>
                             <th>TIME</th>
                             <td id = "curStateTIME"></td>
+                        </tr>
+                        <th>COUNTER</th>
+                            <td id = "curStateCOUNTER"></td>
                         </tr>
                         <tr>
                             <th>OS</th>
@@ -371,6 +377,9 @@
                         <tr>
                             <th>TIME</th>
                             <td id = "nextStateTIME"></td>
+                        </tr>
+                        <th>COUNTER</th>
+                            <td id = "nextStateCOUNTER"></td>
                         </tr>
                         <tr>
                             <th>OS</th>
@@ -422,6 +431,7 @@
             $("#" + eleName + "KONT").html(states[stateId]["KONT"]);
             $("#" + eleName + "ENV").html(states[stateId]["ENV"]);
             $("#" + eleName + "STORE").html(states[stateId]["STORE"]);
+            $("#" + eleName + "COUNTER").html(states[stateId]["COUNTER"]);
         }
 
         $("#nextChildState").click(function() {
