stupid tiny graph

--- a/views/index.html
+++ b/views/index.html
@@ -106,6 +106,7 @@
 
             #flowchart {
                 width: 30%;
+                resize: horizontal;
                 overflow: scroll;
             }
 
@@ -206,6 +207,7 @@
                 margin-bottom: 50px;
             }
             #graphNode {
+                resize: horizontal;
                 max-height: 80%;
                 overflow: scroll;
             }
